--- a/Hooran.Patterns.asmdef
+++ b/Hooran.Patterns.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "PatternsADF",
+    "name": "Hooran.Patterns",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
