--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
 {
   "name": "com.hooran.Patterns",
-  "version": "1.0.0",
-  "unity": "2022.3",
+  "version": "1.0.1",
   "displayName": "Patterns",
-  "description": "Collection of usfull development patterns.",
-  "keywords": [
-    "patterns"
-  ],
-  "category": "2D",
- "samples": [
-    {
-      "displayName": "Pooling System Sample",
-      "description": "Pooling System Sample",
-      "path": "Samples~/Pooling System Sample"
-    },
-    {
-      "displayName": "Singleton Sample",
-      "description": "Singleton Sample",
-      "path": "Samples~/Singleton Sample"
-    }
-  ]
+  "description": "Patterns",
+  "unity": "2022.3",
+  "unityRelease": "0f1",
+  "author": {
+    "name": "Amir Hossein Izadnia"
+  },
+    "dependencies": {
+  }
 }
