--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.hooran.Patterns",
+  "name": "com.hooran.patterns",
   "version": "1.0.1",
   "displayName": "Patterns",
   "description": "Patterns",
