--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "name": "Amir Hossein Izadnia"
   },
     "dependencies": {
-      "com.hooran.PrettyHierarchy": "1.0.1"
+      "com.hooran.prettyhierarchy": "1.0.1"
   }
 }
