--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "name": "Amir Hossein Izadnia"
   },
     "dependencies": {
-      "com.unity.test-framework": "1.4.4",
-      "com.hooran.prettyhierarchy" : "1.0.1"
+      "com.unity.test-framework": "1.4.4"
   }
 }
